tests/resources/invalid/type/class/reassign_wrong_type.mamba
class MyClass
    def something: Int <- 10


def my_class <- MyClass()
my_class.something <- "A string"
